--- a/py/static/album.html
+++ b/py/static/album.html
@@ -9,10 +9,10 @@
     <meta content="user" name="Fan Bu, Bohan Zhang" />  <!-- what's this --> 
     <meta content="#ffffff" name="theme-color" />
     <title>album</title>
-    <link href="./semantic-ui/semantic.min.css" rel="stylesheet" type="text/css" />
-    <link href="./css/default.css" rel="stylesheet" type="text/css" />
-    <link href="./css/pandoc-code-highlight.css" rel="stylesheet" type="text/css" />
-    <script src="./jquery/jquery.min.js"></script>
+    <link href="/semantic-ui/semantic.min.css" rel="stylesheet" type="text/css" />
+    <link href="/css/default.css" rel="stylesheet" type="text/css" />
+    <link href="/css/pandoc-code-highlight.css" rel="stylesheet" type="text/css" />
+    <script src="/jquery/jquery.min.js"></script>
   </head>
   <body>
     <!-- hidden rolling menu -->
