user info added

--- a/py/static/logged_in.html
+++ b/py/static/logged_in.html
@@ -73,10 +73,13 @@
               <div class="eight wide column">
                 <div class="ui relaxed divided items">
                   <div class="item">
-                    <div class="label">name</div>
+                    <div class="label">nick name</div>
                   </div>
                   <div class="item">
-                    <div class="label">phone#</div>
+                    <div class="label">email</div>
+                  </div>
+                  <div class="item">
+                    <div class="label">city</div>
                   </div>
                 </div>
               </div>
