--- a/py/static/login.html
+++ b/py/static/login.html
@@ -29,7 +29,7 @@
 	<div class="ui middle aligned center aligned grid">
 		<div class="column searchcolumn">
 			<h2 class="ui violet header">
-			<i class="add user icon"></i>
+			<i class="user icon"></i>
 			<div class="content">
 				Login
 			</div>
