--- a/py/static/login.html
+++ b/py/static/login.html
@@ -98,8 +98,8 @@
 									$('#info').text("Login succeed!");
 									$('#info').addClass("violet");
 									setTimeout(function(){
-										window.location.href = "/login/";
-									}, 3000);
+										window.location.href = "/me/";
+									}, 1000);
 								}
 							},
 						});     
