--- a/py/static/me.html
+++ b/py/static/me.html
@@ -211,7 +211,7 @@
 
   </div> <!-- pusher -->
 
-      <div class="ui inverted vertical footer segment">
+      <div class="ui inverted vertical footer segment violet">
         <div class="ui container">
           <div class="ui stackable inverted divided equal height stackable grid">
             <div class="three wide column">
@@ -246,11 +246,6 @@
     <style type="text/css">
       .hidden.menu {
         display: none;
-      }
-      
-      .footer.segment {
-        padding: 5em 0em;
-        background: #8A2BE2 !important;
       }
       
       .ui.menu.c_barmenu .toc.item {
