--- a/py/static/me.html
+++ b/py/static/me.html
@@ -25,19 +25,19 @@
       </div>
       <div class="row">
         <div class="ui three wide column">
-          <div class="ui card">
-            <div class="image">
-              <img src="/image/avatar/avatar.png"></div>
-            <div class="content">
-              <a class="header">Kristy</a>
-              <div class="meta">
-                <span class="date">Joined in 2013</span></div>
-              <div class="description">Kristy is an art director living in New York.</div></div>
-            <div class="extra content">
-              <a>
-                <i class="user icon"></i>22 Friends</a>
-            </div>
-          </div>
+            <div class="ui card">
+                <div class="image">
+                  <img src="/image/avatar/avatar.png"></div>
+                <div class="content">
+                  <a class="header" id="username">Kristy</a>
+                  <div class="meta">
+                    <span class="description" id="nickname">Joined in 2017</span></div>
+                  <div class="description" id="city">Living in New York.</div></div>
+                  <div class="extra content">
+                      <a>
+                        <i class="user icon"></i><i id="followers">22 Followers</i></a>
+                    </div>
+              </div>
         </div>
         <div class="fifteen wide column trackcolumn">
           <h3 class="ui violet header">
@@ -151,7 +151,21 @@
           }
         }
       });
-
+      $.ajax({
+        type: 'get',
+        url: '/api/getuser/',
+        data: {},
+        success: function(data) {
+          if (data.status == "error") {
+          }
+          if (data.status == "success") {
+            $("#username").text(data.username);
+            $("#nickname").text(data.nickname);
+            $("#city").val("Living in" + data.city + ".");
+            $("#followers").text(data.followers + " followers");
+          }
+        }
+      });
       $(".detailbutton").click(function() {
         $('.ui .message').addClass("hidden");
         $(".detailbutton").addClass("disabled");
